
* SOLR-16562: Upgrade to Caffeine 3.1.2 (Kevin Risden)

* SOLR-16569: Add java system property to overseer queue size (Nick Ginther via noble)

* SOLR-16574: Demonstrate Dense Vectors and KNN as part of the Films example (Gabriel Magno via Eric Pugh)

* SOLR-16534: Jaegertracer-Configurator is now deprecated. From v10.0 we'll only support OpenTelemetry (janhoy)

==================  9.1.1 ==================

Bug Fixes
---------------------
* SOLR-16589: Large fields with large=true can be truncated when using unicode values (Kevin Risden)

* SOLR-16585: Fixed NPE when paginating MatchAllDocs with non-zero start offset, like q=*:*&start=10 (Michael Gibney)

* SOLR-16567: Fixed problem with filtering and KNN search, especially when using post-filters (Alessandro Benedetti)

* SOLR-16165: Rare Deadlock in SlotAcc initialization (Justin Sweeney, noble)

* SOLR-16588: Fixed problem with default knn algorithm (Elia Porciani via Alessandro Benedetti)

* SOLR-16480: ConfigSets now have an overridable allow-list for filetypes. (Houston Putman)

==================  9.1.0 ==================

New Features
---------------------
* SOLR-16246: Introduced pre-filtering in KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16111: Add hl.queryFieldPattern support, an advanced alternative to the hl.requireFieldMatch boolean flag.
  (Christine Poerschke, David Smiley)

* SOLR-15921: Load jars in <solr-install-dir>/lib/ by default (janhoy)

* SOLR-16005: Support add/update/delete field types in Admin UI Schema page.  (Ahmet Can Kepenek, Eric Pugh)

* SOLR-15853: Admin UI support for managing Paramsets and using in Queries. (Betul Ince, Eric Pugh)

* SOLR-16096: Support createNodeSet parameter when creating collections in Admin UI.   (Eric Pugh)

* SOLR-14319: Add ability to specify replica types when creating collections in Admin UI. (Richard Goodman, Eric Pugh)
